# WEB_HW-14

phonebook/: main.py  pyproject.toml
phonebook/docs/: conf.py  index.rst
phonebook/docs/_build/doctrees/: environment.pickle  index.doctree
phonebook/docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
phonebook/migrations/versions/: 88df32fbfb1a_initial_migrations.py  a8323e9f3fec_init.py  d752eb46d1be_init.py
phonebook/src/: schemas.py
phonebook/src/conf/: config.py
phonebook/src/database/: db.py  models.py
phonebook/src/repository/: contacts.py  users.py
phonebook/src/routes/: auth.py  contacts.py  users.py
phonebook/src/services/: auth.py  email.py
phonebook/templates/: example_email.html
phonebook/tests/: conftest.py  test.db  test_pytest_route_contacts.py  test_pytest_route_users.py  test_unit_repository_contacts.py
